--- a/.github/workflows/jnu-parking-was-peak-v2.yml
+++ b/.github/workflows/jnu-parking-was-peak-v2.yml
@@ -72,6 +72,33 @@ jobs:
                 comment: "레디스 단독 scale-up Plan 실행 from GitHub Actions CI ${{ github.sha }}"
 
 
+            - name: 인프라 조정 시작 슬랙 알림 보내기
+              uses: 8398a7/action-slack@v3
+              with:
+                status: custom
+                fields: author, workflowRun, pullRequest
+                custom_payload: |
+                    {
+                        attachments: [{
+                            color: '#2E289E',
+                            title: '🤖 주차권 시스템 Scale-up 시작!`,
+                            fields: [
+                                {
+                                    title: '배포자',
+                                    value: `${process.env.AS_AUTHOR}`,
+                                    short: true,
+                                },
+                                {
+                                    title: '워크플로 링크',
+                                    value: `${process.env.AS_WORKFLOW_RUN}`,
+                                    short: true,
+                                },
+                            ]
+                        }]
+                    }
+              env:
+                SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
 
             - name: 공지 페이지 라우팅 설정 Plan 생성
               uses: hashicorp/tfc-workflows-github/actions/create-run@v1.3.0
@@ -138,8 +165,7 @@ jobs:
                     {
                         attachments: [{
                             color: '#2E289E',
-                            title: '🔥 인프라 조정 알림',
-                            text: `주차권 시스템 Scale-up 성공! (EC2, RDS, ElastiCache)`,
+                            title: '🔥 주차권 시스템 Scale-up 성공!`,
                             fields: [
                                 {
                                     title: '배포자',
@@ -158,7 +184,7 @@ jobs:
                 SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
                 
 
-                
+
     run-spring-boot:
         needs: [ prepare-variables, modify-infra-with-terraform ]
         runs-on: [ ubuntu-latest ]
@@ -192,8 +218,7 @@ jobs:
                     {
                         attachments: [{
                             color: '#24C183',
-                            title: '✅ Spring boot 기동 알림',
-                            text: 'Spring boot 기동 성공!',
+                            title: '✅ Spring boot 기동 성공!',
                             fields: [
                                 {
                                     title: '배포자',
