--- a/.github/workflows/jnu-parking-was-peak-v2.yml
+++ b/.github/workflows/jnu-parking-was-peak-v2.yml
@@ -81,7 +81,7 @@ jobs:
                     {
                         attachments: [{
                             color: '#2E289E',
-                            title: '🤖 주차권 시스템 Scale-up 시작!`,
+                            title: '🤖 주차권 시스템 Scale-up 시작!',
                             fields: [
                                 {
                                     title: '배포자',
@@ -165,7 +165,7 @@ jobs:
                     {
                         attachments: [{
                             color: '#2E289E',
-                            title: '🔥 주차권 시스템 Scale-up 성공!`,
+                            title: '🔥 주차권 시스템 Scale-up 성공!',
                             fields: [
                                 {
                                     title: '배포자',
