feat: Change the color of slack message to start maintenance

--- a/.github/workflows/jnu-parking-was-peak-v2.yml
+++ b/.github/workflows/jnu-parking-was-peak-v2.yml
@@ -80,7 +80,7 @@ jobs:
                 custom_payload: |
                     {
                         attachments: [{
-                            color: '#2E289E',
+                            color: '#FCCF51',
                             title: '🤖 주차권 시스템 Scale-up 시작!',
                             fields: [
                                 {
