--- a/.github/workflows/jnu-parking-was-idle-v2.yml
+++ b/.github/workflows/jnu-parking-was-idle-v2.yml
@@ -61,7 +61,7 @@ jobs:
                 custom_payload: |
                     {
                         attachments: [{
-                            color: '#2E289E',
+                            color: '#FCCF51',
                             title: '🤖 주차권 시스템 Scale-down 시작!',
                             fields: [
                                 {
